.k8s/v0.4.2/test/graph-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml -f docker-compose-test.yml -o .k8s\v0.4.1\test
    kompose.image-pull-secret: ungpregcredtoken
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: graph
  name: graph
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: graph
    spec:
      containers:
      - env:
        - name: GET_HOSTS_FROM
          value: dns
        - name: GRAPHDB_PORT
          value: "7200"
        - name: GRAPHDB_REPO
          value: sdgs-data
        image: containers.officialstatistics.org/cslovell/sdg-docker-ontologies/graph:v0.4.2
        name: graph
        ports:
        - containerPort: 5002
        resources: {}
      restartPolicy: Always
      tolerations:
      - key: "purpose"
        operator: "Equal"
        value: "app"
      effect: "NoSchedule"
status: {}
