.k8s/v0.4.2/test/graphdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml -f docker-compose-test.yml -o .k8s\v0.4.1\test
    kompose.image-pull-secret: ungpregcredtoken
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: graphdb
  name: graphdb
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: graphdb
    spec:
      containers:
      - image: containers.officialstatistics.org/cslovell/sdg-docker-ontologies/graphdb:v0.4.2
        name: graphdb
        ports:
        - containerPort: 3030
        resources: {}
      restartPolicy: Always
      tolerations:
      - key: "purpose"
        operator: "Equal"
        value: "app"
        effect: "NoSchedule"
status: {}
