.k8s/v0.4.2/test/proxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 80
status:
  loadBalancer: {}
