.k8s/v0.4.2/test/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml -f docker-compose-test.yml -o .k8s\v0.4.1\test
    kompose.image-pull-secret: ungpregcredtoken
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  ports:
  - name: "81"
    port: 81
    targetPort: 81
  selector:
    io.kompose.service: webapp
status:
  loadBalancer: {}
